--- a/style.css
+++ b/style.css
@@ -4,8 +4,10 @@ body{
     margin: 0;
     padding: 0;
 }
-nav ul{
+.list-style-none{
     list-style: none;
+}
+nav ul{
     display: flex; 
     justify-content: flex-end;
     align-items: center;
@@ -28,12 +30,14 @@ nav button{
     align-items: center;
     width: 40px;
     height: 40px;
+    border-radius: 50px;
     
 border: none;
 }
 nav button:hover{
     background-color: rgba(51, 51, 51, 0.179);
-    border-radius: 50px;
+    cursor: pointer;
+
 }
 nav img {
     width: 32px;
@@ -41,4 +45,163 @@ nav img {
 }
 .rounded{
     border-radius: 50%;
+}
+.search-bar{
+    margin-top: 5.5rem;
+    text-align: center;
+}
+.search-bar img{
+    width: 17rem;
+    height: 6rem;
+    margin-bottom: 2rem;
+}
+.search-bar{
+    padding: 0rem 3rem;
+}
+.search-bar form{
+    position: relative;
+    max-width: 700px;
+    margin: auto;
+
+}
+.search-bar form label{
+    position: absolute;
+top: 46.6%;
+left: 0.8rem;
+
+    color: #d1d1d1;
+}
+.search-bar form label i{
+    font-size: 0.8rem;
+}
+
+.search-bar form input{
+    margin-top: 1rem;
+    border-radius: 30px;
+    width: 100%;
+    height: 3rem;
+    padding-left: 2rem;
+    padding-right: 4.5rem;
+    border: 1px solid #e5e5e5;
+    font-size: 0.9rem;
+}
+
+input[type="search"]::-webkit-search-cancel-button {
+         display: none; }
+
+
+input:focus {
+    outline: none;
+  }
+.search-bar form input:hover{
+    box-shadow: 2px 2px 2px rgba(0, 0,0, 0.1);
+}
+.search-bar form button{
+    border: none;
+    background: none;
+    width: 20px;
+    height: 20px;
+    margin-right: 10px;
+}
+.search-bar form button:hover{
+   cursor: pointer;
+}
+.search-bar form button img{
+    width: 20px;
+    height: 20px;
+}
+.input-buttuns-wrapper{
+    display: inline-block;
+    position: absolute;
+    top: 46.6%;
+    right: 0.6rem;
+    
+}
+.voice-wrapper{
+    position: relative;
+    display: inline-block;
+}
+.lens-wrapper{
+    position: relative;
+    display: inline-block;
+}
+.tooltip-google-voice{
+    position:absolute;
+    display: inline-block;
+    left: 0rem;
+  margin-top: 2rem;
+  width:max-content;
+    background-color: rgb(45, 45, 45);
+    color: #d1d1d1;
+    font-size: 0.8rem;
+    padding: 5px;
+    border: 1.5px solid rgb(223, 223, 223);
+    visibility: hidden;
+    transition-delay: 0.3s;
+    
+}
+.tooltip-google-lens{
+    position: absolute;
+display:inline-block;
+left: 0rem;
+    margin-top: 2rem;
+    width:max-content;
+    background-color: rgb(45, 45, 45);
+    color: #d1d1d1;
+    font-size: 0.8rem;
+    padding: 5px;
+    border: 1.5px solid rgb(223, 223, 223);
+    visibility:hidden;
+    transition-delay: 0.3s;
+
+    
+
+}
+.lens-button:hover +.tooltip-google-lens{
+   
+    visibility: visible;
+    
+}
+.voice-button:hover +.tooltip-google-voice{
+   
+    visibility: visible;
+    
+}
+.web-shortcut ul{
+display: flex;
+justify-content: center;
+text-align: center;
+}
+.web-shortcut ul li img {
+    width: 25px;
+    height: 25px;
+   
+    border-radius: 50%;
+    padding: 10px;
+    background-color: rgba(32, 28, 28, 0.632);
+}
+.web-shortcut ul li a {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-top: 10px;
+border-radius: 5px;
+    color: #333;
+    text-decoration: none;
+    width: 95px;
+    height: 95px;
+
+}
+.web-shortcut ul li a p{
+margin-bottom: 0;
+width: 70px;
+            white-space: nowrap;
+            overflow: hidden; 
+            text-overflow: ellipsis;
+            
+}
+.web-shortcut ul li a:hover {
+    background-color: rgba(51, 51, 51, 0.179);
+    
 }
