--- a/style.css
+++ b/style.css
@@ -3,6 +3,10 @@ body{
     font-family: 'Roboto', sans-serif;
     margin: 0;
     padding: 0;
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+    overflow: hidden;
 }
 .list-style-none{
     list-style: none;
@@ -157,12 +161,12 @@ left: 0rem;
     
 
 }
-.lens-button:hover +.tooltip-google-lens{
+.lens-button:hover ~ .tooltip-google-lens{
    
     visibility: visible;
     
 }
-.voice-button:hover +.tooltip-google-voice{
+.voice-button:hover ~ .tooltip-google-voice{
    
     visibility: visible;
     
@@ -204,4 +208,32 @@ width: 70px;
 .web-shortcut ul li a:hover {
     background-color: rgba(51, 51, 51, 0.179);
     
+}
+footer {
+    margin-top: auto;
+    background-color: #f2f2f2;
+    padding: 10px 20px;
+    font-size: 14px;
+    color: #5f6368;
+}
+
+.footer-top {
+    text-align: left;
+    padding: 10px 20px;
+}
+
+.footer-bottom {
+    display: flex;
+    justify-content: space-between;
+    padding: 10px 20px;
+}
+
+.left a, .right a {
+    text-decoration: none;
+    color: #5f6368;
+    margin-right: 15px;
+}
+
+.left a:hover, .right a:hover {
+    text-decoration: underline;
 }
